--- a/todo-app.css
+++ b/todo-app.css
@@ -33,21 +33,52 @@ input[type="text"]:focus {
     border-radius: 3px;
     outline: none;
 }
+input[placeholder]{
+    font-size: 0.9rem;
+    font-family: inter;
+}
+
 #btn{
     background-color: #FED36A;
     border: none;
     border-radius: 3px;
     font-family: inter;
-    padding: 0.95rem;
-    width: 100%;
+    font-size: inherit;
+    padding: 0.5rem;
     box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
     margin-top: 0.5rem;
 }
+#btn:hover{
+    background-color: #d69c09;
+}
 
+#resetBtn{
+    background-color: white;
+    border: none;
+    border-radius: 3px;
+    font-family: inter;
+    font-size: inherit;
+    padding: 0.5rem;
+    box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
+    margin-top: 0.5rem;
+}
+#resetBtn:hover{
+    background-color: #324650;
+}
+
+.wrap-btn{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+}
 ul{
     padding-inline-start: 0rem;
 }
 ul  li{
+    vertical-align: middle;
+}
+span .todo-span{
+    
     vertical-align: middle;
 }
 
@@ -58,6 +89,7 @@ ul .ulStyle {
     border-radius: 3px;
     padding: 0.9rem;
     color: white;
+    vertical-align: middle;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     font-size: 0.85rem;
@@ -66,16 +98,51 @@ ul .ulStyle {
 input[type="checkbox" i]{
     margin: 0rem 0.5rem 0rem 0rem;
     font-size:5rem ;
-    vertical-align: baseline;
+    vertical-align: middle;
 }
 
 input[type="checkbox"] {
     width: 15px; /* Adjust the width as needed */
     height: 15px; /* Adjust the height as needed */
-    border-radius: 1rem; /* Add border-radius */
-    color: red;
+    
 }
-
+input[type="checkbox"] {
+    appearance: none; /* Removes default styling */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid white; /* Yellow border */
+    border-radius: 3px; /* Makes it circular */
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+  }
+  
+  input[type="checkbox"]:checked {
+    background-color: #212832; /* Yellow fill when checked */
+    border-color: #212832;
+  }
+  
+  input[type="checkbox"]:checked::after {
+    content: '✓';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 14px;
+    height: 14px;
+    background-color: #212832;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
 .slash{
     opacity: 0.3;
     color: grey;
@@ -94,4 +161,13 @@ footer{
     color: white;
     font-family: inter;
     text-align: center;
+    margin-top: 1rem;
+}
+
+
+/* MEDIA QUERIES */
+@media all and (min-width:768px) {
+    h1{
+        margin-top: 7rem;
+    }
 }
